index.css
body {
  position: relative;
  min-width: 320px;
  margin: 0;
  padding: 20px;
  background-color: #fff;
  user-select: none;
}

.drag-area,
.draggable-item,
.dropped-item {
  box-sizing: border-box;
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  width: 100px;
  height: 100px;
  border: 1px solid #000;
}

.title {
  text-align: center;
  font: 16px Arial, sans-serif;
}

.draggable-item {
  z-index: 1;
}

.draggable-item_hidden {
  display: none;
}

.draggable-item,
.dropped-item_canvas {
  position: absolute;
}

.container {
  display: flex;
  margin-top: 20px;
  column-gap: 20px;
}

.drop-area {
  box-sizing: border-box;
  width: calc(50% - 10px);
  overflow: auto;
  border: 1px dashed #000;
  aspect-ratio: 1 / 1;
}

.drop-area_highlighted {
  background-color: #cfe8fc;
}

.drop-area_grid {
  display: flex;
  flex-wrap: wrap;
  align-content: flex-start;
  padding: 5px;
  gap: 5px;
}

.drop-area_canvas {
  position: relative;
}

